# krisp

./: .gitignore  README.md  mkdocs.yml  pyproject.toml
docs/: index.md  naming_conventions.md
docs/api_ref/data/: classes.md  readers.md
docs/api_ref/filesystem/: paths.md
docs/api_ref/physics/: atmosphere.md
src/krisp/: _const.py
src/krisp/arts/: agendas.py  atmosphere.py  oem_setup.py  retrieval.py  simulation.py  tools.py
src/krisp/arts/configs/: O3_O3.toml
src/krisp/arts/data/: o3a.h5
src/krisp/data/: classes.py  readers.py  tools.py
src/krisp/filesystem/: _const.py  logging.py  paths.py  readers.py
src/krisp/physics/: atmosphere.py
tests/: data_tests.py
tests/data/: kimra_test_data_feb.h5  kimra_test_data_jul.h5
