[project]
name = "krisp"
version = "0.1.0"
description = "Kiruna Radiometric Inference and Software Platform: KRISP"
readme = "README.md"
authors = [
    { name = "Richard Johansson", email = "richard.johansson@irf.se" }
]
requires-python = ">=3.14"
dependencies = [
    "matplotlib>=3.10.8",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.6",
    "mkdocstrings-python>=2.0.3",
    "numpy>=2.4.4",
    "pytest>=9.0.3",
    "rich>=15.0.0",
    "scipy>=1.17.1",
    "watchdog>=6.0.0",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
krisp = ["config/*.toml"]

[tool.ruff]
line-length = 100

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
